# LidView

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
LidView/: CMakeLists.txt
LidView/src/: App.h  main.cpp  settings.h
LidView/src/Core/: Application.cpp  Application.h  Object.cpp  Object.h
LidView/src/Shader/Objects/: TriangleShader.vert
LidView/src/Tools/: shader.cpp  shader.h
LidViewClient/: CMakeLists.txt
LidViewClient/src/: main.cpp
LidViewServer/: CMakeLists.txt
LidViewServer/src/: LidViewServer.h  assimp_config.h  to_LidView.h
LidViewServer/src/Core/: Application.cpp  Application.h  Component.cpp  Component.h  Level.cpp  Level.h  Object.cpp  Object.h
LidViewServer/src/Tools/: mesh.h  model.cpp  model.h  shader.cpp  shader.h
assets/: coil.blend  coil.fbx
